[project]
name = "neuronutils"
version = "0.1.0"
description = "The Purkinje cell model originally implemented by De Schutter and Bower (1994)."
readme = "README.md"
requires-python = ">=3.7,<3.13"
dependencies = [
    "black>=23.3.0",
    "isort>=5.11.5",
    "neuron>=8.2.6",
    "tqdm>=4.67.1",
]
